--- a/package.json
+++ b/package.json
@@ -33,32 +33,31 @@
     },
     "private": true,
     "devDependencies": {
-        "@changesets/changelog-github": "^0.4.2",
-        "@changesets/cli": "^2.19.0",
-        "@nrwl/cli": "13.4.1",
-        "@nrwl/devkit": "13.9.5",
-        "@nrwl/eslint-plugin-nx": "13.9.5",
-        "@nrwl/linter": "13.9.5",
-        "@nrwl/nx-plugin": "13.9.5",
-        "@nrwl/workspace": "13.9.5",
+        "@aws-sdk/client-s3": "^3.67.0",
+        "@changesets/changelog-github": "^0.4.4",
+        "@changesets/cli": "^2.22.0",
+        "@nrwl/devkit": "13.10.1",
+        "@nrwl/eslint-plugin-nx": "13.10.1",
+        "@nrwl/linter": "13.10.1",
+        "@nrwl/nx-plugin": "13.10.1",
+        "@nrwl/workspace": "13.10.1",
         "@types/js-yaml": "^4.0.5",
-        "@types/node": "17.0.6",
-        "@typescript-eslint/eslint-plugin": "5.10.2",
-        "@typescript-eslint/parser": "5.10.2",
-        "@aws-sdk/client-s3": "^3.58.0",
+        "@types/node": "17.0.23",
+        "@typescript-eslint/eslint-plugin": "5.18.0",
+        "@typescript-eslint/parser": "5.18.0",
         "dotenv": "10.0.0",
-        "esbuild": "^0.14.10",
-        "eslint": "8.7.0",
-        "eslint-config-prettier": "8.3.0",
+        "esbuild": "^0.14.34",
+        "eslint": "8.13.0",
+        "eslint-config-prettier": "8.5.0",
         "json": "^11.0.0",
-        "prettier": "2.6.1",
-        "ts-node": "~10.4.0",
+        "nx": "13.10.1",
+        "prettier": "2.6.2",
+        "ts-node": "~10.7.0",
         "tslib": "^2.3.1",
-        "typescript": "4.5.4",
-        "typescript-json-schema": "^0.52.0",
-        "vite": "^2.7.10",
-        "vitest": "^0.0.126",
-        "nx": "13.9.5"
+        "typescript": "4.6.3",
+        "typescript-json-schema": "^0.53.0",
+        "vite": "^2.9.1",
+        "vitest": "^0.9.3"
     },
     "dependencies": {
         "execa": "^5.1.1"
