--- a/libs/pulumi/package.json
+++ b/libs/pulumi/package.json
@@ -12,7 +12,6 @@
         "js-yaml": "^4.1.0"
     },
     "peerDependencies": {
-        "@nrwl/devkit": ">13.10.0",
-        "@aws-sdk/client-s3": "^3.58.0"
+        "@nrwl/devkit": ">14.5.0"
     }
 }
